<resources>
    <string name="app_name">Minitask</string>
    <string name="about">About</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="cleaning">Cleaning...</string>
    <string name="add_todo_item">Add task</string>
    <string name="add_todo_item_hint">Insert your task here</string>
    <string name="empty_input">Don\'t leave your task empty</string>
    <string name="reminder_or_not">Set a reminder for me</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="reminder_set_at">Reminder set at</string>
    <string name="reminder_info">Info about reminder:</string>
    <string name="no_reminder">There is not a reminder for this activity!</string>
    <string name="not_found">Not found!</string>
    <string name="item_deleted">Task deleted!</string>
    <string name="time_error">Please specify a time</string>
    <string name="time_error_purpose">A specific time is better for proper notification</string>
    <string name="task_to_be_done">Task to be done</string>
    <string name="detail">Detail</string>
    <string name="clean_all_done">Clean done tasks</string>
    <string name="app_version">Version 2.0</string>
    <string name="author">Author: Lorenzo Redaelli</string>
    <string name="initial_idea">From the idea and initial development of: </string>
    <string name="original_author" translatable="false">Luong Tran Thanh Vo</string>
    <string name="contact_me">You can contact us at</string>
    <string name="support_me">Support us at</string>
    <string name="my_email" translatable="false">thanh.luong.for.fun@gmail.com</string>
    <string name="github_acc" translatable="false">github.com/LewisVo</string>
    <string name="twitter_acc" translatable="false">twitter.com/MiracleLuong</string>
    <string name="facebook_acc" translatable="false">facebook.com/seeknd3stroy</string>
    <string name="patreon_acc" translatable="false">patreon.com/luongtranthanhvo</string>
    <string name="paypal_acc" translatable="false">paypal.me/LuongTranThanhVo</string>

    <string name="github_redlor" translatable="false">github.com/redlor</string>
    <string name="paypal_redlor" translatable="false">paypal.me/redlor</string>

    <!--Change, strings for the menu dialog-->
    <string name="delete_message">Are you sure you want to delete the task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_message">Are you sure you want to delete all the selected tasks?</string>
    <string name="deleted_all_task">Selected tasks deleted</string>
    <string name="no_items_checked">No items have been checked!</string>

    <string name="click_item">Click an item</string>

    <string name="facebook_app_id" translatable="false">298382557233568</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb298382557233568</string>

    <string name="sign_out" translatable="false">Sign Out</string>

    <string name="inbox" translatable="false">INBOX</string>
    <string name="today">TODAY</string>
    <string name="next_7_days">NEXT 7 DAYS</string>

    <!--String for deleteTodo button's dialog -->
    <string name="delete_single_task_message">Are you sure you want to delete this task?</string>

    <string name="privacy_title" translatable="false">Privacy Policy</string>
    <string name="privacy_policy" translatable="false">
​
Lorenzo Redaelli built the Minitask app as an Open Source app. This SERVICE is provided by Lorenzo Redaelli at no cost and is intended for use as is.

This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at [App Name]Minitask unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to email, Google sign-in, tasks. The information that I request is retained on your device and is not collected by me in any way

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services

Firebase Analytics

Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;

To provide the Service on our behalf;

To perform Service-related services; or

To assist us in analyzing how our Service is used.

I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>

</resources>
