<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="luongvo.com.todolistminimal.AddTodoItem">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/todoInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#3f51b5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/todoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:gravity="start|bottom"
                    android:hint="@string/add_todo_item_hint"
                    android:nextFocusLeft="@id/todoEditText"
                    android:nextFocusUp="@id/todoEditText"
                    app:met_baseColor="#efdcd5"
                    app:met_clearButton="true"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="@string/add_todo_item"
                    app:met_floatingLabelTextColor="@android:color/white"
                    app:met_helperText="@string/empty_input"
                    app:met_helperTextColor="#c62828"
                    app:met_hideUnderline="false"
                    app:met_singleLineEllipsis="true"
                    app:met_textColor="#ffffff"
                    app:met_underlineColor="#ffff00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#757de8"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_alarm_on_white_36dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/reminder_or_not"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/reminderSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSetDate"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#303f9f"
                        android:padding="10dp"
                        android:text="@string/set_date"
                        android:textColor="#ffff00"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/buttonSetTime"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#303f9f"
                        android:padding="10dp"
                        android:text="@string/set_time"
                        android:textColor="#ffff00"
                        android:visibility="gone" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reminderText"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_set_at"
                        android:textColor="#ffff00"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:visibility="gone" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addTodoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:src="@drawable/ic_done_white_36dp"
            app:layout_anchor="@id/todoInput"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
