<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/todoDetailLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#3f51b5"
                android:gravity="center">

                <TextView
                    android:id="@+id/todoInfo"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:ellipsize="end"
                    android:gravity="start|bottom"
                    android:lineSpacingExtra="10dp"
                    android:maxLines="5"
                    android:text="@string/click_item"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#757de8"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_access_alarms_white_36dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/reminder_info"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reminderInfo"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_found"
                        android:textColor="#ffff00"
                        android:textSize="20sp"
                        android:textStyle="italic" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editTodoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:src="@drawable/ic_mode_edit_white_24dp"
            app:layout_anchor="@id/todoDetailLayout"
            app:layout_anchorGravity="bottom|right|end" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/deleteTodoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:src="@drawable/ic_delete_sweep_white_24dp"
            app:layout_anchor="@id/todoDetailLayout"
            app:layout_anchorGravity="bottom|left|start" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
